--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ body {
     }
     .select-tip input#custom {
         padding: 0;
-           width: 108px;
+        width: 108px;
     }
     .number_of_people input {
         width: 202px;
@@ -290,5 +290,6 @@ body {
     .green input {
         width: 200px;
         margin-left: -10px;
+        margin-top: -10px;
     }
 }
