--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ body {
 }
 .select-tip input#custom::placeholder{
     color: var(--VeryDarkCyan);
+    font-size: 12px;
 }
 .select-tip input#custom:focus::placeholder {
     opacity: 0;
@@ -290,6 +291,6 @@ body {
     .green input {
         width: 200px;
         margin-left: -10px;
-        margin-top: -10px;
+        margin-top: -18px;
     }
 }
